# recursive-types-3.12

./: pyproject.toml
tests/: test_jsontype.py
