[tool.poetry]
name = "recursive-types-3-12"
version = "0.1.0"
description = ""
authors = ["Soof Golan <soofgolan@gmail.com>"]
readme = "README.md"
packages = [{ include = "recursive_types_3" }]

[tool.poetry.dependencies]
python = "^3.12"
pytest = "^7.4.3"
typeguard = "^4.1.5"
mypy = "^1.7.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.pytest]
filterwarnings = ["error"]